sum fixes plus install dis universal tween engine

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ project(":desktop") {
         compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
+        compile "org.mini2Dx:universal-tween-engine:6.3.3"
     }
 }
 
@@ -45,8 +46,10 @@ project(":core") {
 
 
     dependencies {
+        compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+        compile "org.mini2Dx:universal-tween-engine:6.3.3"
     }
 }
 
